// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.

syntax = "proto3";

package foundation.universe.vault;

option go_package = "namespacelabs.dev/foundation/universe/vault";

message AppRole {
    string name = 1;
    string auth_mount = 2;
    VaultProvider provider = 3;
}

message Certificate {
    string base_domain = 1;
    string issuer = 3;
    VaultProvider provider = 4;

    reserved 2;
}

message VaultProvider {
    string address = 1;
    string namespace = 2;
    string auth_mount = 3;
}
